# src/doc/openapi.yaml
@@ -5,23 +5,23 @@ info:
   description: chart-js-app API
   version: 1.0.0
 servers:
-    - url: 'http://localhost:3000'
-      description: 開発環境
+  - url: "http://localhost:3000"
+    description: 開発環境
 paths:
-  '/api/cereals':
+  "/api/cereals":
     get:
       description: シリアル一覧取得
       operationId: CerealsShow
       tags:
         - cereals
       responses:
-        '200':
+        "200":
           description: 成功時
           content:
             application/json:
               schema:
                 type: array
-                items: 
+                items:
                   type: object
                   properties:
                     name:
@@ -56,7 +56,7 @@ paths:
                       type: integer
                     rating:
                       type: integer
-        '500':
+        "500":
           description: サーバーエラー
     post:
       description: シリアル追加
@@ -69,46 +69,46 @@ paths:
             schema:
               type: object
               properties:
-                  name:
-                    type: string
-                  mfr:
-                    type: string
-                  type:
-                    type: string
-                  calories:
-                    type: integer
-                  protein:
-                    type: integer
-                  fat:
-                    type: integer
-                  sodium:
-                    type: integer
-                  fiber:
-                    type: integer
-                  carbo:
-                    type: integer
-                  sugars:
-                    type: integer
-                  potass:
-                    type: integer
-                  vitamins:
-                    type: integer
-                  shelf:
-                    type: integer
-                  weight:
-                    type: integer
-                  cups:
-                    type: integer
-                  rating:
-                    type: integer
+                name:
+                  type: string
+                mfr:
+                  type: string
+                type:
+                  type: string
+                calories:
+                  type: integer
+                protein:
+                  type: integer
+                fat:
+                  type: integer
+                sodium:
+                  type: integer
+                fiber:
+                  type: integer
+                carbo:
+                  type: integer
+                sugars:
+                  type: integer
+                potass:
+                  type: integer
+                vitamins:
+                  type: integer
+                shelf:
+                  type: integer
+                weight:
+                  type: integer
+                cups:
+                  type: integer
+                rating:
+                  type: integer
       responses:
-        '200':
+        "200":
           description: 成功時
-        '400':
+        "400":
           description: バリデーションエラー
-        '500':
+        "500":
           description: サーバーエラー
-  '/api/cereals/{serealName}':
+  "/api/cereals/{serealName}":
     get:
       description: シリアル取得
       operationId: CerealGet
@@ -122,7 +122,7 @@ paths:
           required: true
           description: シリアル名
       responses:
-        '200':
+        "200":
           description: 成功時
           content:
             application/json:
@@ -161,9 +161,11 @@ paths:
                     type: integer
                   rating:
                     type: integer
-        '404':
+        "404":
           description: シリアルが存在しないエラー
-        '500':
+        "400":
+          description: バリデーションエラー
+        "500":
           description: サーバーエラー
     put:
       description: シリアル更新
@@ -185,44 +187,44 @@ paths:
               required:
                 - name
               properties:
-                  mfr:
-                    type: string
-                  type:
-                    type: string
-                  calories:
-                    type: integer
-                  protein:
-                    type: integer
-                  fat:
-                    type: integer
-                  sodium:
-                    type: integer
-                  fiber:
-                    type: integer
-                  carbo:
-                    type: integer
-                  sugars:
-                    type: integer
-                  potass:
-                    type: integer
-                  vitamins:
-                    type: integer
-                  shelf:
-                    type: integer
-                  weight:
-                    type: integer
-                  cups:
-                    type: integer
-                  rating:
-                    type: integer
+                mfr:
+                  type: string
+                type:
+                  type: string
+                calories:
+                  type: integer
+                protein:
+                  type: integer
+                fat:
+                  type: integer
+                sodium:
+                  type: integer
+                fiber:
+                  type: integer
+                carbo:
+                  type: integer
+                sugars:
+                  type: integer
+                potass:
+                  type: integer
+                vitamins:
+                  type: integer
+                shelf:
+                  type: integer
+                weight:
+                  type: integer
+                cups:
+                  type: integer
+                rating:
+                  type: integer
       responses:
-        '200':
+        "200":
           description: 成功時
-        '400':
+        "400":
           description: バリデーションエラー
-        '404':
+        "404":
           description: シリアルが存在しないエラー
-        '500':
+        "500":
           description: サーバーエラー
     delete:
       description: シリアル削除
@@ -237,9 +239,11 @@ paths:
           required: true
           description: シリアル名
       responses:
-        '200':
+        "200":
           description: 成功時
-        '404':
+        "400":
+          description: バリデーションエラー
+        "404":
           description: シリアルが存在しないエラー
-        '500':
+        "500":
           description: サーバーエラー
